# WISE_FWI_Module

./: .gitignore  CMakeLists.txt  README.md
cpp/: .gitignore  CWFGM_FWI.cpp  fwi.cpp  fwi.h
include/: CWFGM_FWI.h  FwiCom.h
java/: .project  pom.xml  pom.xml.in
java/src/main/java/ca/wise/fwi/: FWICalculations.java  Fwi.java
